fix z-index

--- a/Ex1/style/right.css
+++ b/Ex1/style/right.css
@@ -179,6 +179,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 .past {
@@ -187,6 +188,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1440px) {
@@ -343,6 +345,7 @@ body {
   .past {
     width: 50px;
     height: 50px;
+    z-index: 3;
   }
 
   .link {
@@ -377,5 +380,10 @@ body {
 
   .title-answer {
     font-size: 12px;
+  }
+
+  .next,
+  .past {
+    z-index: 4;
   }
 }
