--- a/Ex2/style/right.css
+++ b/Ex2/style/right.css
@@ -187,6 +187,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 .past {
@@ -195,6 +196,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1440px) {
@@ -259,6 +261,7 @@ body {
   .past {
     width: 70px;
     height: 70px;
+    z-index: 3;
   }
 
   .link {
@@ -391,5 +394,10 @@ body {
 
   .title-answer {
     font-size: 12px;
+  }
+
+  .next,
+  .past {
+    z-index: 4;
   }
 }
