--- a/Ex3/style/right.css
+++ b/Ex3/style/right.css
@@ -195,6 +195,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 .past {
@@ -203,6 +204,7 @@ body {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1440px) {
@@ -399,5 +401,10 @@ body {
 
   .title-answer {
     font-size: 12px;
+  }
+
+  .next,
+  .past {
+    z-index: 4;
   }
 }
